# GameEngine

./: .gitignore  CMakeLists.txt  README.md
bindings/: CMakeLists.txt  bindings.cpp
engine/: CMakeLists.txt
engine/include/engine/: Camera.hpp  EditorUI.hpp  Engine.hpp  Framebuffer.hpp  GameObject.hpp  Launcher.hpp  Math.hpp  Mesh.hpp  ObjLoader.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Transform.hpp  Window.hpp
engine/src/: EditorUI.cpp  Engine.cpp  Framebuffer.cpp  Launcher.cpp  Mesh.cpp  ObjLoader.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Window.cpp
python/examples/: main.py
